--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="#d32f2f">
+    <meta name="description" content="Sayısal Analiz Merkezi'nde EBOB, EKOK, Asallık Kontrolü ve hızlı bir Hesap Makinesi ile matematik işlemlerinizi anında gerçekleştirin. Hızlı ve güvenilir matematik araçları.">
+    <meta name="keywords" content="EBOB hesapla, EKOK hesapla, En Büyük Ortak Bölen, En Küçük Ortak Kat, Asallık Kontrolü, Hesap Makinesi, Sayısal Analiz Merkezi, matematik araçları, matsnc">
+    <meta property="og:title" content="Sayısal Analiz Merkezi | EBOB-EKOK ve Hesaplama Araçları">
+    <meta property="og:description" content="Sayısal Analiz Merkezi'nde EBOB, EKOK, Asallık Kontrolü ve hızlı bir Hesap Makinesi ile matematik işlemlerinizi anında gerçekleştirin.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://matsnc.netlify.app/">
 
 </head>
 <body>
@@ -71,4 +77,5 @@
         document.body.onselectstart = function() { return false; }
     </script>
     </body>
+
 </html>
