--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+    <meta name="google-site-verification" content="OqYUowsyBgiIt4Q4ZSM91MrKSSPFCyNEXDCfWlB_bAo"/>
     <meta charset="UTF-8">
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -79,3 +80,4 @@
     </body>
 
 </html>
+
