--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
     <meta property="og:url" content="https://matsnc.netlify.app/">
 
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4KV5T65KZX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4KV5T65KZX');
+</script>
 <body>
     <div class="container">
         <h1>Sayısal Analiz Merkezi</h1>
@@ -84,3 +93,4 @@
     </script>
     </body>
 </html>
+
