--- a/oyunlar/anasayfa.html
+++ b/oyunlar/anasayfa.html
@@ -178,9 +178,9 @@
                 <h2>Testler</h2>
                 <p>Matematik testleri çöz.(Yakında Gelecek)</p>
             </a>
-            <a href="index.html" class="menu-item neon-blue-border">
+            <a href="oyun.html" class="menu-item neon-blue-border">
                 <h2>Bilgi Yarışması</h2>
-                <p>Matematik Bilginizi Test Edin.(Yakında Gelecek)</p>
+                <p>Matematik Bilginizi Test Edin.</p>
             </a>
             
             <a href="index.html" class="menu-item neon-green-border">
@@ -222,4 +222,5 @@
         document.body.onselectstart = function() { return false; }
     </script>
 </body>
+
 </html>
