--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </a>
             <a href="oyunlar/anasayfa.html" class="menu-item neon-green-border">
                 <h2>Oyunlarımız</h2>
-                <p>Oyunlarımız Yakında Gelecek...</p>
+                <p>Matematik oyunları oynayarak zekanızı test edin.</p>
             </a>
         </div>
     </div>
@@ -95,6 +95,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </script>
     </body>
 </html>
+
 
 
 
