--- a/oyunlar/oyun.html
+++ b/oyunlar/oyun.html
@@ -242,7 +242,7 @@
         </div>
 
         <div id="screen-menu" style="display: block;">
-            <p style="text-align: center; margin-bottom: 30px; font-size: 1.1rem; color: #dcdde1;">LGS Matematik - Sonsuz Soru Modu</p>
+            <p style="text-align: center; margin-bottom: 30px; font-size: 1.1rem; color: #dcdde1;">Matematik bilginizi test edin.</p>
             <div class="menu-grid">
                 <div class="card" onclick="startGame(1)">
                     <h3>1. ÜNİTE</h3>
@@ -752,3 +752,4 @@
     </script>
 </body>
 </html>
+
