--- a/oyunlar/oyun.html
+++ b/oyunlar/oyun.html
@@ -240,7 +240,7 @@
             <img src="sapka.png" class="santa-hat" alt="Noel Baba Şapkası">
             <h1>BİLGİ YARIŞMASI</h1>
         </div>
-        <a href="https://matsnc.netlify.app/" class="back-link">&lt; Ana Menüye Dön [EXIT]</a>
+        <a href="https://matsnc.netlify.app/oyunlar" class="back-link">&lt; Ana Menüye Dön [EXIT]</a>
 
         <div id="screen-menu" style="display: block;">
             <p style="text-align: center; margin-bottom: 30px; font-size: 1.1rem; color: #dcdde1;">Matematik bilginizi test edin.</p>
@@ -753,6 +753,7 @@
     </script>
 </body>
 </html>
+
 
 
 
