--- a/oyunlar/oyun.html
+++ b/oyunlar/oyun.html
@@ -499,12 +499,11 @@
                     q.correct = s;
                     q.options = [s, s*2, s*4, s/2];
                 }
-                else if (type === 7) { // Veri Analizi: Derece Hesabı
-                    // Toplam 360, % verip derece soralım
+                else if (type === 7) {
                     q.text = "Bir daire grafiğinde %25'lik dilime düşen merkez açı kaç derecedir?";
                     q.correct = "90°";
                     q.options = ["90°", "45°", "120°", "180°"];
-                }
+                }
                 else if (type === 8) { // Çevre Bulma
                     let a = rnd(3, 8);
                     q.text = `Bir kenarı 3√${a} olan karenin çevresi nedir?`;
@@ -517,6 +516,11 @@
                     q.correct = len / 4;
                     q.options = [len/4, len/2, len, 4];
                 }
+                else if (type === 10) {
+                    q.text = "40 kişilik bir arkadaş grubunda 25 tane kız vardır. Buna göre erkeklerin daire grafiğindeki açısı kaçtır?";
+                    q.correct = "135°";
+                    q.options = ["180°", "135°", "90°", "45°"];
+                }
                 else { // Ondalık Karekök
                      let val = rnd(1, 9); // 1.21 gibi olmalı -> 11^2 = 121
                      let sq = (val+10)*(val+10); // 121, 144..
@@ -525,8 +529,6 @@
                      q.options = [(val+10)/10, (val+10)/100, val+10, (val)/10];
                 }
             }
-            // --- 3. ÜNİTE: OLASILIK & CEBİR ---
-            // --- 3. ÜNİTE: OLASILIK & CEBİR (GÜNCELLENDİ) ---
             else if (unitCode === 3) {
                 type = rnd(1, 12); // 12 Farklı Şablon
                 
@@ -753,6 +755,7 @@
     </script>
 </body>
 </html>
+
 
 
 
