--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <h2>Oyunlarımız</h2>
                 <p>Matematik oyunları oynayarak zekanızı test edin.</p>
             </a>
+            
+            <a href="karekoksnc/index.html" class="menu-item neon-purple-border">
+                <h2>Karekök Hesaplayıcı</h2>
+                <p>Bir sayının karekökünü anında hesaplayın ve sonucu görün.</p>
+            </a>
+            
         </div>
     </div>
     <script>
@@ -95,6 +101,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </script>
     </body>
 </html>
+
 
 
 
