--- a/oyunlar/anasayfa.html
+++ b/oyunlar/anasayfa.html
@@ -176,7 +176,7 @@
         <div class="menu-grid">
             <a href="index.html" class="menu-item neon-green-border">
                 <h2>Testler</h2>
-                <p>Matematik testleri çöz.(Yakında Gelecek)</p>
+                <p>Matematik testlerini PDF olarak al.(Yakında Gelecek)</p>
             </a>
             <a href="oyun.html" class="menu-item neon-blue-border">
                 <h2>Bilgi Yarışması</h2>
@@ -224,3 +224,4 @@
 </body>
 
 </html>
+
