--- a/oyunlar/anasayfa.html
+++ b/oyunlar/anasayfa.html
@@ -170,13 +170,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Oyun Simülasyonları</h1>
-        <p>Eğlenceli zeka oyunlarımız yakında hizmetinizde:</p>
+        <h1>Test PDF ve Oyun Simülasyonları</h1>
+        <p>Testlerimiz Eğlenceli zeka oyunlarımız yakında hizmetinizde:</p>
         <a href="../index.html" class="back-link">&lt; Ana Menüye Dön [EXIT]</a>
         <div class="menu-grid">
-            <a href="index.html" class="menu-item neon-green-border">
+            <a href="testler.html" class="menu-item neon-green-border">
                 <h2>Testler</h2>
-                <p>Matematik testlerini PDF olarak al.(Yakında Gelecek)</p>
+                <p>Matematik testlerini PDF olarak al.</p>
             </a>
             <a href="oyun.html" class="menu-item neon-blue-border">
                 <h2>Bilgi Yarışması</h2>
@@ -224,4 +224,5 @@
 </body>
 
 </html>
+
 
