--- a/oyunlar/testler.html
+++ b/oyunlar/testler.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matematik Test Merkezi</title>
+    <title>Testler</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
@@ -86,7 +86,7 @@
                 <div class="bg-white border border-gray-200 p-6 rounded-xl hover:shadow-lg transition-all group">
                     <h3 class="text-xl font-bold text-gray-800 group-hover:text-blue-600">${t.title}</h3>
                     <p class="text-gray-500 text-sm mt-2 mb-6">${t.desc}</p>
-                    <a href="${t.link}" target="_blank" class="block text-center bg-gray-900 text-white py-2 rounded-lg hover:bg-blue-600 transition">PDF İndir / Çöz</a>
+                    <a href="${t.link}" target="_blank" class="block text-center bg-gray-900 text-white py-2 rounded-lg hover:bg-blue-600 transition">PDF İndir</a>
                 </div>
             `).join('');
         }
@@ -130,4 +130,5 @@
         }
     </script>
 </body>
+
 </html>
