--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <p>Bir sayının asal olup olmadığını hızla kontrol edin.</p>
             </a>
             <a href="oyunlar/anasayfa.html" class="menu-item neon-green-border">
-                <h2>Oyunlarımız</h2>
+                <h2>PDF Testlerimiz ve Oyunlarımız</h2>
                 <p>Matematik oyunları oynayarak zekanızı test edin.</p>
             </a>
             
@@ -101,6 +101,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </script>
     </body>
 </html>
+
 
 
 
