--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </a>
             <a href="oyunlar/anasayfa.html" class="menu-item neon-green-border">
                 <h2>PDF Testlerimiz ve Oyunlarımız</h2>
-                <p>Matematik oyunları oynayarak zekanızı test edin.</p>
+                <p>Matematik testlerini çözerek matematik bilginizi test edin.</p>
             </a>
             
             <a href="karekoksnc/index.html" class="menu-item neon-purple-border">
@@ -101,6 +101,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </script>
     </body>
 </html>
+
 
 
 
