Fix HTML formatting and update links in anasayfa.html

--- a/oyunlar/anasayfa.html
+++ b/oyunlar/anasayfa.html
@@ -183,9 +183,9 @@
                 <p>Matematik Bilginizi Test Edin.</p>
             </a>
             
-            <a href="index.html" class="menu-item neon-green-border">
+            <a href="mantik.html" class="menu-item neon-green-border">
                 <h2>Mantık ve Zeka Geliştirme</h2>
-                <p>Mantık bulmacaları çöz.(Yakında Gelecek)</p>
+                <p>LGS'ye hazırlanmak için Mantık bulmacaları çöz.</p>
             </a>
                 
         </div>
@@ -224,5 +224,6 @@
 </body>
 
 </html>
+
 
 
