Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <h2>Karekök Hesaplayıcı</h2>
                 <p>Bir sayının karekökünü anında hesaplayın ve sonucu görün.</p>
             </a>
+            <a href="mathcoz/index.html" class="menu-item neon-purple-border">
+                <h2>Matematik Canavarı 1.0</h2>
+                <p>Yeni geliştirdiğimiz YZ'yı denemenizi tavsiye ederiz.</p>
+            </a>
             
         </div>
     </div>
@@ -101,6 +105,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </script>
     </body>
 </html>
+
 
 
 
