--- a/mathcoz/index.html
+++ b/mathcoz/index.html
@@ -220,7 +220,7 @@
 </div>
 
 <script>
-    const BACKEND_URL = "https://serverai-wtpr.onrender.com";
+    const BACKEND_URL = "https://serverai-wtpr.onrender.com/app.py";
 
     function previewImage() {
         const file = document.getElementById('file-input').files[0];
