Fix HTML encoding issues in index.html

--- a/mathcoz/index.html
+++ b/mathcoz/index.html
@@ -220,7 +220,7 @@
 </div>
 
 <script>
-    const BACKEND_URL = "https://serverai-wtpr.onrender.com";
+    const BACKEND_URL = "https://servers-1as.onrender.com";
 
     function previewImage() {
         const file = document.getElementById('file-input').files[0];
@@ -283,5 +283,6 @@
 </script>
 </body>
 </html>
+
 
 
