--- a/mathcoz/index.html
+++ b/mathcoz/index.html
@@ -3,125 +3,158 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MATEMATİK CANAVARI 1.0</title>
+    <title>MATEMATİK CANAVARI 1.0 | AI</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;500;700&family=Syncopate:wght@700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&family=Syncopate:wght@700&display=swap');
 
         :root {
-            --glow: #00f2ff;
-            --dark-bg: #050505;
-            --card-bg: rgba(20, 20, 20, 0.8);
-            --neon-pink: #ff0055;
+            --primary: #00f2ff;
+            --secondary: #7000ff;
+            --accent: #ff0055;
+            --bg-dark: #030303;
+            --glass: rgba(255, 255, 255, 0.03);
+            --glass-border: rgba(255, 255, 255, 0.08);
+            --text-main: #f0f0f0;
         }
 
-        * { box-sizing: border-box; }
+        * { 
+            box-sizing: border-box; 
+            margin: 0; 
+            padding: 0; 
+            scrollbar-width: thin;
+            scrollbar-color: var(--secondary) transparent;
+        }
+
         body {
-            background-color: var(--dark-bg);
-            background-image: 
-                radial-gradient(circle at 50% 50%, #111 0%, #050505 100%),
-                linear-gradient(rgba(0, 242, 255, 0.05) 1px, transparent 1px),
-                linear-gradient(90deg, rgba(0, 242, 255, 0.05) 1px, transparent 1px);
-            background-size: 100% 100%, 30px 30px, 30px 30px;
-            color: #e0e0e0;
-            font-family: 'Space Grotesk', sans-serif;
-            margin: 0;
+            background-color: var(--bg-dark);
+            color: var(--text-main);
+            font-family: 'Plus Jakarta Sans', sans-serif;
+            height: 100vh;
             display: flex;
             flex-direction: column;
-            height: 100vh;
             overflow: hidden;
+            background-image: 
+                radial-gradient(circle at 10% 20%, rgba(112, 0, 255, 0.1) 0%, transparent 40%),
+                radial-gradient(circle at 90% 80%, rgba(0, 242, 255, 0.05) 0%, transparent 40%);
         }
 
+        /* Modern Mesh Arka Plan */
+        body::before {
+            content: "";
+            position: absolute;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: url('https://grainy-gradients.vercel.app/noise.svg');
+            opacity: 0.2;
+            pointer-events: none;
+            z-index: 1;
+        }
+
+        /* Header Tasarımı */
         header {
-            padding: 20px 40px;
+            padding: 1.5rem 3rem;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            border-bottom: 1px solid rgba(0, 242, 255, 0.2);
-            backdrop-filter: blur(10px);
+            background: rgba(3, 3, 3, 0.7);
+            backdrop-filter: blur(20px);
+            border-bottom: 1px solid var(--glass-border);
             z-index: 10;
         }
 
         .logo {
             font-family: 'Syncopate', sans-serif;
-            font-size: 1.5rem;
-            letter-spacing: 4px;
-            color: var(--glow);
-            text-shadow: 0 0 15px var(--glow);
+            font-size: 1.2rem;
+            letter-spacing: 5px;
+            background: linear-gradient(90deg, var(--primary), #fff);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            filter: drop-shadow(0 0 10px rgba(0, 242, 255, 0.5));
         }
 
-        .status {
-            font-size: 0.8rem;
-            color: #00ff00;
-            text-transform: uppercase;
-            letter-spacing: 2px;
+        .status-badge {
             display: flex;
             align-items: center;
+            gap: 8px;
+            background: rgba(0, 255, 135, 0.05);
+            padding: 6px 14px;
+            border-radius: 100px;
+            border: 1px solid rgba(0, 255, 135, 0.2);
+            color: #00ff87;
+            font-size: 0.7rem;
+            font-weight: 800;
+            text-transform: uppercase;
+            letter-spacing: 1px;
         }
 
-        .status::before {
-            content: "";
-            width: 8px; height: 8px;
-            background: #00ff00;
+        .status-dot {
+            width: 6px; height: 6px;
+            background: #00ff87;
             border-radius: 50%;
-            margin-right: 10px;
-            box-shadow: 0 0 10px #00ff00;
+            box-shadow: 0 0 10px #00ff87;
+            animation: pulse 2s infinite;
         }
 
+        /* Chat Alanı */
         #chatBox {
             flex: 1;
             overflow-y: auto;
-            padding: 40px;
+            padding: 2rem 15% 4rem 15%;
             display: flex;
             flex-direction: column;
-            gap: 20px;
+            gap: 1.5rem;
+            z-index: 2;
         }
 
         .msg {
-            max-width: 75%;
-            padding: 15px 25px;
-            border-radius: 15px;
-            font-size: 1.05rem;
+            max-width: 85%;
+            padding: 1.2rem 1.6rem;
+            border-radius: 24px;
+            font-size: 1rem;
+            line-height: 1.6;
             position: relative;
-            animation: slideIn 0.3s ease-out;
-            border: 1px solid rgba(255,255,255,0.05);
-            white-space: pre-wrap;
+            animation: msg-appear 0.4s cubic-bezier(0.16, 1, 0.3, 1);
         }
 
         .ai-msg {
             align-self: flex-start;
-            background: var(--card-bg);
-            border-left: 4px solid var(--glow);
-            box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+            background: var(--glass);
+            border: 1px solid var(--glass-border);
+            border-bottom-left-radius: 4px;
+            color: #e0e0e0;
         }
 
         .user-msg {
             align-self: flex-end;
-            background: linear-gradient(135deg, #1a1a1a, #0a0a0a);
-            border-right: 4px solid var(--neon-pink);
+            background: linear-gradient(135deg, var(--secondary), #4e00b3);
+            color: white;
+            border-bottom-right-radius: 4px;
+            box-shadow: 0 10px 25px rgba(112, 0, 255, 0.2);
         }
 
-        .input-panel {
-            padding: 30px 40px;
-            background: rgba(0,0,0,0.8);
-            border-top: 1px solid rgba(0, 242, 255, 0.1);
+        /* Input Paneli */
+        .bottom-container {
+            padding: 2rem 15%;
+            background: linear-gradient(to top, var(--bg-dark) 60%, transparent);
+            z-index: 10;
         }
 
-        .input-container {
-            max-width: 1000px;
-            margin: 0 auto;
-            position: relative;
+        .input-wrapper {
+            background: rgba(20, 20, 20, 0.6);
+            backdrop-filter: blur(30px);
+            border: 1px solid var(--glass-border);
+            border-radius: 28px;
+            padding: 8px 12px;
             display: flex;
             align-items: center;
-            background: #111;
-            border-radius: 20px;
-            padding: 5px 15px;
-            border: 1px solid #222;
-            transition: 0.4s;
+            gap: 10px;
+            transition: 0.3s;
+            position: relative;
         }
 
-        .input-container:focus-within {
-            border-color: var(--glow);
-            box-shadow: 0 0 25px rgba(0, 242, 255, 0.15);
+        .input-wrapper:focus-within {
+            border-color: var(--primary);
+            box-shadow: 0 0 30px rgba(0, 242, 255, 0.1);
+            transform: translateY(-2px);
         }
 
         input[type="text"] {
@@ -129,93 +162,118 @@
             background: transparent;
             border: none;
             color: white;
-            padding: 20px;
-            font-size: 1.1rem;
+            padding: 14px;
+            font-size: 1rem;
+            font-family: inherit;
             outline: none;
-            font-family: 'Space Grotesk', sans-serif;
         }
 
-        .icon-btn {
-            background: transparent;
-            border: none;
-            color: #555;
-            cursor: pointer;
-            padding: 10px;
-            transition: 0.3s;
+        .action-btn {
+            width: 45px; height: 45px;
             display: flex;
             align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            cursor: pointer;
+            transition: 0.2s;
+            border: none;
         }
 
-        .icon-btn:hover { color: var(--glow); transform: scale(1.1); }
+        .upload-btn {
+            background: var(--glass);
+            color: #aaa;
+        }
+
+        .upload-btn:hover { background: var(--glass-border); color: #fff; }
 
         #send-btn {
-            background: var(--glow);
+            background: #fff;
             color: #000;
-            border: none;
-            padding: 12px 25px;
-            border-radius: 12px;
-            font-weight: 700;
-            cursor: pointer;
-            margin-left: 10px;
+            width: auto;
+            padding: 0 25px;
+            border-radius: 20px;
+            font-weight: 800;
             font-family: 'Syncopate', sans-serif;
-            font-size: 0.8rem;
-            transition: 0.3s;
+            font-size: 0.7rem;
         }
 
         #send-btn:hover {
-            box-shadow: 0 0 20px var(--glow);
-            transform: translateY(-2px);
+            background: var(--primary);
+            box-shadow: 0 0 20px var(--primary);
         }
 
+        /* Resim Önizleme */
         #preview-box {
             display: none;
             position: absolute;
             bottom: 100%;
-            left: 20px;
-            background: #111;
-            border: 2px solid var(--glow);
-            padding: 10px;
-            border-radius: 15px;
-            margin-bottom: 15px;
-            animation: popUp 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            left: 0;
+            background: #151515;
+            border: 1px solid var(--primary);
+            padding: 8px;
+            border-radius: 18px;
+            margin-bottom: 20px;
+            box-shadow: 0 20px 40px rgba(0,0,0,0.5);
         }
 
-        #preview-box img { max-height: 120px; border-radius: 8px; }
+        #preview-box img { max-height: 150px; border-radius: 12px; }
 
-        @keyframes slideIn { from { opacity: 0; transform: translateY(20px); } }
-        @keyframes popUp { from { opacity: 0; transform: scale(0.5); } }
+        .close-preview {
+            position: absolute;
+            top: -10px; right: -10px;
+            background: var(--accent);
+            width: 24px; height: 24px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            border: none; color: white;
+        }
 
-        ::-webkit-scrollbar { width: 6px; }
-        ::-webkit-scrollbar-track { background: transparent; }
-        ::-webkit-scrollbar-thumb { background: #222; border-radius: 10px; }
+        /* Animasyonlar */
+        @keyframes pulse { 0% { opacity: 0.5; } 50% { opacity: 1; } 100% { opacity: 0.5; } }
+        @keyframes msg-appear { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+
+        /* Mobil Ayarlar */
+        @media (max-width: 768px) {
+            #chatBox { padding: 1rem 5%; }
+            .bottom-container { padding: 1rem 5%; }
+            header { padding: 1rem 1.5rem; }
+        }
     </style>
 </head>
 <body>
 
 <header>
     <div class="logo">MATH CANAVARI 1.0</div>
-    <div class="status">Sistem Aktif</div>
+    <div class="status-badge">
+        <div class="status-dot"></div>
+        Sistem Çevrimiçi
+    </div>
 </header>
 
 <div id="chatBox">
-    <div class="msg ai-msg">Hoş geldin. Sorunu yaz ya da fotoğrafını gönder, saniyeler içinde çözüp sana anlatıyım.</div>
+    <div class="msg ai-msg">
+        Selam! Ben Matematik Canavarı. Çözmemi istediğin soruyu buraya yazabilir veya fotoğrafını yükleyebilirsin. Tüm 8. sınıf öğrencilerine başarılar dilerim!
+    </div>
 </div>
 
-<div class="input-panel">
-    <div class="input-container">
+<div class="bottom-container">
+    <div class="input-wrapper">
         <div id="preview-box">
             <img id="preview-img" src="">
-            <button onclick="clearImage()" style="background:var(--neon-pink); border:none; color:white; border-radius:50%; width:20px; height:20px; position:absolute; top:-10px; right:-10px; cursor:pointer;">×</button>
+            <button class="close-preview" onclick="clearImage()">×</button>
         </div>
 
-        <label for="file-input" class="icon-btn" title="Resim Yükle">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect><circle cx="8.5" cy="8.5" r="1.5"></circle><polyline points="21 15 16 10 5 21"></polyline></svg>
+        <label for="file-input" class="action-btn upload-btn" title="Görsel Yükle">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect><circle cx="8.5" cy="8.5" r="1.5"></circle><polyline points="21 15 16 10 5 21"></polyline></svg>
         </label>
         <input type="file" id="file-input" hidden accept="image/*" onchange="previewImage()">
 
-        <input type="text" id="userInput" placeholder="Soru yazın veya bir dosya bırakın..." onkeypress="if(event.key==='Enter') sendMessage()">
+        <input type="text" id="userInput" placeholder="Matematik sorunu buraya bırak..." onkeypress="if(event.key==='Enter') sendMessage()">
         
-        <button id="send-btn" onclick="sendMessage()">TARA</button>
+        <button id="send-btn" class="action-btn" onclick="sendMessage()">ANALİZ ET</button>
     </div>
 </div>
 
@@ -246,9 +304,10 @@
 
         if (!input.value && !fileInput.files[0]) return;
 
+        // Kullanıcı Mesajı
         const userDiv = document.createElement('div');
         userDiv.className = 'msg user-msg';
-        userDiv.innerText = input.value || "Resim analiz ediliyor...";
+        userDiv.innerText = input.value || "Görsel analiz ediliyor...";
         chatBox.appendChild(userDiv);
 
         const formData = new FormData();
@@ -256,33 +315,29 @@
         if (fileInput.files[0]) formData.append('image', fileInput.files[0]);
 
         input.value = "";
+        const currentImage = fileInput.files[0];
         clearImage();
         chatBox.scrollTop = chatBox.scrollHeight;
 
+        // AI Yanıt Alanı
         const aiDiv = document.createElement('div');
         aiDiv.className = 'msg ai-msg';
-        aiDiv.innerHTML = "<i>Canavar düşünüyor...</i>";
+        aiDiv.innerHTML = "<span style='opacity:0.5'>Canavar analiz ediyor...</span>";
         chatBox.appendChild(aiDiv);
 
         try {
-            // URL başına BACKEND_URL ekledim
             const response = await fetch(`${BACKEND_URL}/chat`, { method: 'POST', body: formData });
-            const reader = response.body.getReader();
-            aiDiv.innerHTML = ""; 
+            
+            if (!response.ok) throw new Error("Sunucu hatası");
 
-            while (true) {
-                const {done, value} = await reader.read();
-                if (done) break;
-                aiDiv.innerText += new TextDecoder().decode(value);
-                chatBox.scrollTop = chatBox.scrollHeight;
-            }
+            const resultText = await response.text();
+            aiDiv.innerText = resultText;
+            chatBox.scrollTop = chatBox.scrollHeight;
+
         } catch (e) {
-            aiDiv.innerText = "Hata oluştu: Sunucuya bağlanılamadı. (Backend uyanıyor olabilir, lütfen tekrar dene)";
+            aiDiv.innerHTML = "<span style='color:var(--accent)'>Bağlantı hatası: Sunucu uyanıyor olabilir. Lütfen birazdan tekrar dene.</span>";
         }
     }
 </script>
 </body>
 </html>
-
-
-
